# smallpt-wasm

./: .gitignore  CMakeLists.txt  README.md  a.out  app.js  explicit.cpp  setup-wasm.sh  smallpt  smallpt-dynamic.cpp
sample-meshes/: cornell.json  data.txt  forest.json  island.json  nightsky.json  overlap.json  sky.json  vista.json  wada.json  wada2.json
